--- a/templates/customers.html.twig
+++ b/templates/customers.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Customers{% endblock %}
+{% block title %}Clients{% endblock %}
 
-{% block titre %}Customer{% endblock %}
+{% block titre %}Clients{% endblock %}
 
 {% block body %}
 
