--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -3,21 +3,21 @@
       <a class="nav-link" aria-current="page" href="/">Home</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{{ path('events') }}">Evens</a>
+        <a class="nav-link" href="{{ path('events') }}">Events</a>
       </li>
     <li class="nav-item">
-        <a class="nav-link" href="{{ path('invoices') }}">Invoices</a>
+        <a class="nav-link" href="{{ path('invoices') }}">Factures</a>
       </li>    
       <li class="nav-item">
-        <a class="nav-link" href="{{ path('orders') }}">Orders</a>
+        <a class="nav-link" href="{{ path('orders') }}">Commandes</a>
       </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ path('customers') }}">Customers</a>
+      <a class="nav-link" href="{{ path('customers') }}">Clients</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ path('products') }}">Products</a>
+      <a class="nav-link" href="{{ path('products') }}">Produits</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ path('settings') }}">Settings</a>
+      <a class="nav-link" href="{{ path('setting_categories') }}">Configuration</a>
     </li>
   </ul>
