--- a/templates/settings.html.twig
+++ b/templates/settings.html.twig
@@ -12,11 +12,11 @@
     <li class="nav-item">
       <a class="nav-link" href="{{ path('setting_fees') }}">Type of Fees</a>
     </li>
-    <li class="nav-item">
+    <!-- li class="nav-item">
       <a class="nav-link" href="#">Link</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Configuration</a>
-    </li>
+    </li -->
 </ul>
 {% endblock %}
