--- a/templates/settings/categoryAdd.html.twig
+++ b/templates/settings/categoryAdd.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New fees type{% endblock %}
+{% block title %}Nouvelle catégorie de produits{% endblock %}
 
-{% block titre %}Setting/Type/fees{% endblock %}
+{% block titre %}Configuration/nouvelle/catégorie{% endblock %}
 
 {% block body %}
 
