--- a/templates/settings/fees.html.twig
+++ b/templates/settings/fees.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Type de Frais{% endblock %}
 
-{% block titre %}Setting/Frais{% endblock %}
+{% block titre %}Configuration/Frais{% endblock %}
 
 {% block body %}
 
