--- a/templates/settings/feesAdd.html.twig
+++ b/templates/settings/feesAdd.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nouveau Type{% endblock %}
+{% block title %}Nouveau Type de frais{% endblock %}
 
-{% block titre %}Setting/Type{% endblock %}
+{% block titre %}Configuration/nouveau/type/frais{% endblock %}
 
 {% block body %}
 
