--- a/templates/customers/customerAdd.html.twig
+++ b/templates/customers/customerAdd.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nouveau Customer{% endblock %}
+{% block title %}Nouveau Client{% endblock %}
 
-{% block titre %}Customer/Nouveau{% endblock %}
+{% block titre %}Client/Nouveau{% endblock %}
 
 {% block body %}
 
 {{ form_start(customerForm) }}
 
-<div class="row">
+<div class="row row-cols-2">
     <div class="col">
        {{form_row(customerForm.firstName)}}
     </div>
@@ -17,18 +17,9 @@
     </div>
 </div>
 <div class="row">
-    <div class="col">
+    <div class="col-4">
        {{form_row(customerForm.gender)}}
-    </div>
 </div>   
-<div class="row">
-    <div class="col">
-       {{form_row(customerForm.email)}}
-    </div>
-    <div class="col">
-      {{form_row(customerForm.phone)}}
-    </div>
-</div> 
 <div class="row">
     <div class="col">
        {{form_row(customerForm.address)}}
@@ -41,9 +32,23 @@
     <div class="col">
       {{form_row(customerForm.city)}}
     </div>
-</div>   
+</div>
 <div class="row">
+    <div class="col-4">
+       {{form_row(customerForm.country)}}
+    </div>
+</div>    
+<div class="row">
+    </div>
+        <div class="col">
+       {{form_row(customerForm.email)}}
+    </div>
     <div class="col">
+      {{form_row(customerForm.phone)}}
+    </div>
+</div> 
+<div class="row">
+    <div class="col-2">
        {{form_row(customerForm.save)}}
     </div>
     <div class="col">
