--- a/templates/customers/measurement_m.html.twig
+++ b/templates/customers/measurement_m.html.twig
@@ -9,7 +9,7 @@
 
   <div class="row">
     <div class="col-6">
-      <img class="img img-thumbnail" src="{{ asset('images/mesuraration_'~ gender ~'.jpg') }}"/>
+      <img src="{{ asset('images/mesuraration_'~ gender ~'.jpg') }}" height="150"/>
     </div>
     <div class="col-6">
         {{ form_start(measurementForm) }}
