--- a/templates/invoices.html.twig
+++ b/templates/invoices.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Invoices{% endblock %}
+{% block title %}Factures{% endblock %}
 
-{% block titre %}Invoices{% endblock %}
+{% block titre %}Factures{% endblock %}
 
 {% block body %}
 
