--- a/templates/orders.html.twig
+++ b/templates/orders.html.twig
@@ -17,35 +17,17 @@
 </div>
 <div class="row">
     <div class="col">
-        <table>
-            <thead>
-                <th>Client</th>
-                <th>Lieu</th>
-                <th>Date</th>
-                <th>Nb Article</th>
-                <th>Total</th>
-                <th>#</th>
-            </thead>
-            <tbody>
-                {% for order in orders %}
-                    {% set total = 0 %}
-                    {% set nbArticle = 0 %}
-                    {% for line in order.invoiceLines %}
-                        {% set total = total + (line.price * line.quantity - ((line.price * line.quantity * line.discount)/100)) %}
-                        {% set nbArticle = nbArticle + 1 %}
-                    {% endfor %}
-                 <tr>                                   
-                    <td>{{order.customer.name}}</td>
-                    <td>{{order.events.name}}</td>
-                    <td>{{order.date|date("d-m-Y")}}</td>
-                    <td>{{nbArticle}}</td>
-                    <td>{{total}}</td>
-                    <td></td>
-                    {# <td><a href="{{ path('invoice_view', {order:order.id}) }}">view</a></td> #}
-                 </tr>                       
-                {% endfor %}
-            </tbody>
-        </table    
+    <div class="col">
+        <div id="presidents">Loading...</div>
+        <script src="{{ asset('bundles/datatables/js/datatables.js') }}"></script>
+        <script>
+        $(function() {
+            $('#presidents').initDataTables({{ datatable_settings(datatable) }}, {
+                searching: true,
+                dom:'<"html5buttons"B>lTfgitp',});
+        });
+        </script>      
+    </div> 
     </div>
 </div>
 {% endblock %}
