--- a/templates/invoices/invoicesAdd.html.twig
+++ b/templates/invoices/invoicesAdd.html.twig
@@ -29,7 +29,7 @@
             data-widget-tags="{{ '<td></td>'|e }}"
             data-widget-counter="{{ invoicesForm.invoiceLines|length }}">
 
-            <table id="tableInvoice" border='1'>
+            <table id="tableInvoice" border='1' style="display:none;">
             <thead>
                 <tr>
                     <th>Product</th>
