--- a/templates/settings/fees.html.twig
+++ b/templates/settings/fees.html.twig
@@ -8,16 +8,13 @@
 
 <ul class="nav nav-tabs">
     <li class="nav-item">
-      <a class="nav-link" href="{{ path('setting_categories') }}">Type de products</a>
+      <a class="nav-link" href="{{ path('setting_categories') }}">Type de Produits</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="#">Type de frais</a>
+      <a class="nav-link active" href="#">Type de Frais</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Configuration</a>
+      <a class="nav-link" href="{{ path('setting_country') }}">Pays</a>
     </li>
 </ul>
 <div class=row>
